# riscv-metamorphic-testing

iss/: CMakeLists.txt  no-seed.txt  output1.txt  output10.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
iss/src/core/common/: CMakeLists.txt  dmi.h  elf_loader.h  instr.cpp  instr.h
iss/src/core/rv32/: CMakeLists.txt  csr.h  iss.cpp  iss.h  mem.h
iss/src/platform/: CMakeLists.txt
iss/src/platform/default/: CMakeLists.txt  code_builder.cpp  code_builder.h  common.cpp  common.h  executor.cpp  executor.h  instr_builder.cpp  instr_builder.h  main.cpp  main.cpp.bak  memory.cpp  memory.h  memory_interface.cpp  memory_interface.h  mutations.cpp  mutations.h  random.cpp  random.h  test_rules.cpp  test_rules.h  tests.cpp  tests.h
iss/src/util/: common.h
notes/: mutations.txt  new-rules.txt  overview.pptx  rules.txt
scripts/: activate.sh  add.py  main.py  make-mutators.py  mutate_exec.py  or.py  run.py  xor.py
